# arm4r

./: .gitignore  DATASET.md  LICENSE  NOTICE  README.md  SIM.md  pyproject.toml
arm4r/data/: dataset_3dpoints_pretraining.py  datasets_robotic_finetuning.py  utils.py
arm4r/models/policy/: __init__.py  action_head.py  arm4r.py  arm4r_rlbench_pretrain_mask.py  arm4r_wrapper.py  pred_head.py
arm4r/util/: args.py  engine.py  lr_sched.py  misc.py  model_constructor.py
config/: change_path.py  dataset_config_epic_pretraining.json  dataset_config_kinova.json  dataset_config_rlbench.json
scripts/: finetune_robotics.py  pretrain_epic.py
sim/: README.md  batch_eval.sh  batch_eval_2.sh  eval.py  get_bash.py  setup.py
sim/agents/arm4r_bc/: __init__.py  arm4r_agent.py  launch_utils.py  utils.py
sim/conf/: eval_arm4r.yaml
sim/conf/method/: LVM_BC.yaml
sim/helpers/: custom_rlbench_env.py  preprocess_agent.py
sim/process_datasets/: convert_dataset_rlbench.py  generate_training_eps.py  utils.py
tools/: inference_kinova.ipynb  inference_points_epic.py  process_epic.py
